# DutyBoard

./: .env.example  README.md  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: duty-data.ts  index.html  main.ts  setting.css  setting.html  setting.ts  shared.css  store.ts  styles.css  webfetch.ts  window-utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: board.json  default.json  setting.json
src-tauri/src/: lib.rs  main.rs
