[package]
name = "duty-board"
version = "0.1.1"
description = "值日生轮值看板"
authors = ["Gewu Assembly"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "duty_board_lib"
# crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
# Build with `--features show` to force always-on display,
# ignoring the class schedule hide logic.
show = []

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-http = "2"
tauri-plugin-positioner = "2"
tauri-plugin-store = "2"

